--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailadmin-react",
+  "name": "@markwave/landify-dashboard",
   "private": true,
   "version": "2.1.0",
   "type": "module",
@@ -23,6 +23,7 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.13.3",
     "clsx": "^2.1.1",
+    "firebase": "^12.9.0",
     "flatpickr": "^4.6.13",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -33,7 +34,7 @@
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
-    "swiper": "^11.2.3",
+    "swiper": "^12.1.2",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
